--- a/list.css
+++ b/list.css
@@ -1,6 +1,17 @@
+html {
+    -webkit-font-smoothing: antialiased;
+    font-size: 16px;
+    font-family: 'Helvetica Neue',Roboto,'Segoe UI',sans-serif;
+    -webkit-tap-highlight-color: transparent;
+    background-color: #f0f0f2;
+    color: #333;
+    line-height: 1.2;
+}
+
 body {
     max-width: 800px;
     margin: 0 auto;
+    background-color: #fff;
 }
 
 .rel-list {
